# maana

./: .gitignore  README.md
maana-ingest/: .env.example  README.md  pyproject.toml
maana-ingest/examples/: diwan_e_ghalib_pilot.template.json
maana-ingest/registry/: canonical_registry.json
maana-ingest/src/maana_ingest/: __init__.py  __main__.py
maana-ingest/src/maana_ingest/annotation/: __init__.py  base.py  citation_resolver.py  client.py  couplet_detector.py  hadith_detector.py  interpretation_hints.py  merger.py  models.py  persian_detector.py  poet_detector.py  prompts.py  quran_detector.py  service.py
maana-ingest/src/maana_ingest/audio/: __init__.py  models.py  service.py
maana-ingest/src/maana_ingest/cleaning/: __init__.py  models.py  service.py
maana-ingest/src/maana_ingest/cli/: __init__.py  app.py
maana-ingest/src/maana_ingest/config/: __init__.py  settings.py
maana-ingest/src/maana_ingest/core/: __init__.py  logging.py  paths.py
maana-ingest/src/maana_ingest/download/: __init__.py  service.py  workspace.py
maana-ingest/src/maana_ingest/exporters/: __init__.py  commentary.py
maana-ingest/src/maana_ingest/models/: __init__.py  source.py
maana-ingest/src/maana_ingest/ontology/: __init__.py  claim_bundle.py  commentary.py  commentary_models.py  models.py  (+3 more)
maana-ingest/tests/: test_annotation.py  test_audio.py  test_claim_bundle.py  test_cleaning.py  test_cli.py  test_commentary.py  test_download.py  test_lecture_review.py  test_ontology.py  test_poem_materialize.py  test_poem_review.py  test_poems.py  test_registry.py  test_speech.py
(+164 files in other folders)
