[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maana-ingest"
version = "0.1.0"
description = "Production-grade ingestion pipeline for Maana long-form lecture processing."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Ayub" }
]
dependencies = [
  "faster-whisper>=1.1.0",
  "loguru>=0.7.2",
  "pydantic-settings>=2.4.0",
  "sqlmodel>=0.0.22",
  "typer>=0.12.3",
  "yt-dlp>=2025.1.26",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
]

[project.scripts]
maana = "maana_ingest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maana_ingest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
